--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset="utf-8">
     <title>Hello World!</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    Well, hello there!
+    This is the way.
   </body>
 </html>
