--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     <title>Hello World!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="//d3js.org/d3.v3.min.js"></script>
   </head>
   <body>
-    This is the way.
+    <h2>Welcome!  Enjoy this clock while you wait.</h2>
+    <script type="text/javascript" src="clock.js"></script>
   </body>
 </html>
