--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Hello World!</title>
+    <title>David Allyn's GitHub</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="//d3js.org/d3.v3.min.js"></script>
   </head>
