Added Sequence Starburst pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h2>Welcome!  Enjoy this clock while you wait.</h2>
+      <a href="Sequences_Starburst/index.html">Sequences Starburst</a>
     <script type="text/javascript" src="clock.js"></script>
   </body>
 </html>
