updated links on index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h2>Welcome!  Enjoy this clock while you wait.</h2>
-      <a href="Sequences_Starburst/index.html">Sequences Starburst</a>
-    <script type="text/javascript" src="clock.js"></script>
+      <div class="opening-links">
+        <a href="sequences-starburst/sequences.html">D3: Sequences Starburst</a>
+      </div>
+
+      <script type="text/javascript" src="clock.js"></script>
   </body>
 </html>
