--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>David Allyn's GitHub</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style "text{display:hidden;}"></style>
     <script src="//d3js.org/d3.v3.min.js"></script>
   </head>
   <body>
