--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>David Allyn's GitHub</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <link rel="stylesheet" type="text/css"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style "text{display:hidden;}"></style>
+
     <script src="//d3js.org/d3.v3.min.js"></script>
   </head>
   <body>
