--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap">
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="http://d3js.org/d3.v3.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v3.min.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <h2>Welcome!  Enjoy this clock while you wait.</h2>
