Many Changes Much Fun
These are all the cumlative changes to the play time fun time in D3

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <h2>Welcome!  Enjoy this clock while you wait.</h2>
       <div class="opening-links">
         <a href="sequences-starburst/sequences.html">D3: Sequences Starburst</a>
+        <br>
+        <a href="/just_starting/play.html">Play Time</a>
       </div>
 
       <script type="text/javascript" src="clock.js"></script>
